--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@ body {
     font-size: 16px;
 }
 
-.pesqueiro-imagem{
+.agricultura-imagem{
     width: 25%;
 }
 
-.pesqueiro{
+.agricultura{
     background-image: linear-gradient(#424E61,#16CFF8);
     color:white;
     display: flex;
@@ -37,12 +37,12 @@ body {
     padding: 24px 0;
 }
 
-.pesqueiro-div-conteudo{
+.agricultura-div-conteudo{
     width: 35%;
 }
 
 
-.pesqueiro-titulo{
+.agricultura-titulo{
     padding: 24px 0;
 }
 
