--- a/style.css
+++ b/style.css
@@ -46,29 +46,29 @@ body {
     padding: 24px 0;
 }
 
-.produtos{
+.alimentos{
     padding: 24px 0;
 }
-.produtos-imagem{
+.alimentos-imagem{
     width: 120px;
 }
 
-.produtos-icone{
+.alimentos-icone{
     width: 24px;
     padding: 4px 8px;
 }
 
-.produtos-div{
+.alimentos-div{
     text-align: center;
     padding: 16px 0;
 }
 
-.produtos-titulo{
+.alimento-titulo{
     text-align: center;
     padding: 50px 0;
 }
 
-.produtos-todos{
+.alimentos-todos{
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
 }
